# triangulum

./: .gitignore  LICENSE  README.md  calculator.py  fetcher.py  koppen.py  pyproject.toml  trewartha.py  weather_stations.json
archive/: calculator.py  fetcher.py  stationCompiler.py
src/triangulum/: __init__.py  api.py  cache.py  cli.py  consts.py  fs.py  logger.py  types.py  utils.py
src/triangulum/classifications/: koppen.py
src/triangulum/models/: __init__.py  responses.py  station.py
src/triangulum/utils/: __init__.py  calculator.py  stationCompiler.py
